# pyquick

./: README.md  pyproject.toml
.github/workflows/: test.yaml
