[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pyquick"
authors = [
    { name = "Bernardo Veronese", email = "bernardo.veronese@edu.ufes.br" },
]
description = "Minimal template for Python repo."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
keywords = []
license = { file = "LICENSE" }
classifiers = ["Programming Language :: Python :: 3"]
dynamic = ["dependencies", "version"]

[project.urls]
Homepage = "https://github.com/binado/pyquick"

[project.scripts]

[project.optional-dependencies]
ci = ['pytest']
dev = ['pytest', 'ruff', 'pre-commit']

[tool.setuptools.packages.find]
include = ['gladeparser*']

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

# pyproject.toml
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["test"]
